# pl-project

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  catalog.json
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
backend/: auth.py  database.py  main.py  models.py  pyproject.toml
backend/routers/: auth.py  chat.py  documents.py
backend/services/: ai_service.py  doc_registry.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py
docs/: getting-started.md
frontend/: README.md  jest.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/__mocks__/: react-markdown.tsx  rehype-raw.ts
frontend/__mocks__/next/: navigation.ts
frontend/__tests__/components/: DocumentChat.test.tsx  DocumentCreator.test.tsx  NDAChat.test.tsx  NDACreator.test.tsx  NDAForm.test.tsx  NDAPreview.test.tsx
frontend/__tests__/fixtures/: nda.ts
frontend/__tests__/lib/: nda-template.test.ts  state-utils.test.ts  template-engine.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: DocumentChat.tsx  DocumentCreator.tsx  GenericDocumentForm.tsx  GenericDocumentPreview.tsx  NDAChat.tsx  NDACreator.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/lib/: api-documents.ts  auth.ts  export-docx.ts  (+4 more)
frontend/tests/: nda-creator.spec.ts
scripts/: start-linux.sh  start-windows.ps1  start.bat  start.sh  stop-linux.sh  stop-windows.ps1  stop.bat  stop.sh
templates/: LICENSE.txt
(+27 files in other folders)
